# Algorithm-and-programming-practicum-TASK-TRO-25-

ALPRO_10.1/: 1.const.cpp  2.const_define.cpp  3.array_std.cpp  4.cin_getline.cpp
ALPRO_10.1/LATIHAN/: 1.konversi_suhu.cpp  2.vector_input.cpp  3.tebak_angka.cpp
ALPRO_10.2/: 1.scope.cpp  2.fungsi.cpp  3.comment.cpp  4.std.cpp
ALPRO_10.2/LATIHAN/: 2.pengelolaan_barang.cpp  3.kalkulator.cpp
ALPRO_11/: penjelasan.md
ALPRO_11/11.1/: 1.pengkondisian.cpp  2.boolean.cpp  3.loop_for.cpp  4.loop_whle.cpp  5.loop_do.cpp  6.loop_array.cpp  7.latihan_rata_rata.cpp  8.latihan_tabel_perkalian.cpp
ALPRO_11/11.2/: 1.parameter_copy.cpp  2.parameter_reference.cpp  3.prototype_fungsi.cpp
ALPRO_11/11.2/latihan_modular/: main.cpp  menu.cpp  menu.hpp
ALPRO_11/11.2/organisasi_kode/: main.cpp  math_utils.cpp  math_utils.hpp
ALPRO_12/: README.md  game_floppybird.cpp  penjelasan_oop_cpp.md
ALPRO_12/Inheritance_DASAR/: 1.dasar.cpp
ALPRO_12/Inheritance_DASAR/INHERITANCE+PEMISAHANFILE/: Mahasiswa.cpp  (+4 more)
ALPRO_12/OOP_CLASS/: 1.class_sederhana.cpp  2.class_atribut_cons.cpp  3.class_menambahkan_metode.cpp
ALPRO_12/PEMISAHAN_FILE/: Mahasiswa.cpp  Mahasiswa.hpp  main.cpp
ALPRO_8/: kalkulator.cpp  test_1.cpp  test_2.cpp
ALPRO_CMAKE/: CMakeLists.txt  main.cpp
TASK WEEK 3/: Driving_age.py  basic_if_else.py
TASK WEEK 4/: guess_country_iam_thinking_of.py  want_food.py
TASK WEEK 5/: create_another_list.py  food_delivering_no_validating.py  food_delivering_with_validating.py  ingradient_list_loop.py  test.py
TASK WEEK 6/: calculator_function.py  school_grade_static.py  test.py
